[tool.poetry]
name = "prod1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
black = "*"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
httpx = "^0.27.2"
openai = "^1.51.2"
python-multipart = "^0.0.12"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.10"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
prod1 = "prod1.main"
